<resources>
    <string name="app_name">Zebra RFID Mobile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="rapid_read">Rapid Read</string>
    <string name="title_activity_inventory">InventoryActivity</string>
    <string-array name="options_array">
        <item>Menú de inicio</item>
        <item>Lectura rapida</item>
        <item>Inventario</item>
        <item>Buscar etiqueta</item>
        <item>Ajustes</item>
        <item>Control de Acceso</item>
        <item>Pre Filtros</item>
        <item>Lista de lectores RFID</item>
        <item>About</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_none">None</string>
    <string name="action_user">User</string>
    <string name="action_reserved">Reserved</string>
    <string name="action_tid">TID</string>
    <string name="action_epic">EPC</string>
    <string name="title_activity_antenna_settings">Antena</string>
    <string name="title_activity_readers_list">Lista De Lectores</string>
    <string name="title_activity_application_settings">Aplicacion</string>
    <string name="title_activity_singulation_control">Singulation Control</string>
    <string name="unique_tag_settings">Unique Tag Settings</string>
    <string name="unique_tag_reads">Report Unique tags</string>
    <string name="report_unique_tags">Report Unique tags</string>
    <string-array name="link_profile_array">
        <item>RF Mode 1</item>
        <item>RF Mode 2</item>
        <item>RR Mode 1</item>
        <item>RR Mode 2</item>
        <item>RS Mode 1</item>
        <item>RS Mode 2</item>
    </string-array>
    <string-array name="session_array">
        <item>S0</item>
        <item>S1</item>
        <item>S2</item>
        <item>S3</item>
    </string-array>
    <string-array name="tag_population_array">
        <item>30</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>600</item>
    </string-array>
    <string-array name="inventory_state_array">
        <item>STATE A</item>
        <item>STATE B</item>
        <item>AB FLIP</item>
    </string-array>
    <string-array name="sl_flags_array">
        <item>ALL</item>
        <item>DEASSERTED</item>
        <item>ASSERTED</item>
    </string-array>
    <string-array name="inv_menu_items">
        <item>None</item>
        <item>User</item>
        <item>Reserved</item>
        <item>TID</item>
        <item>EPC</item>
    </string-array>
    <string-array name="acess_read_write_memory_bank_array">
        <item>EPC</item>
        <item>RESV</item>
        <item>TID</item>
        <item>USER</item>
    </string-array>
    <string-array name="acess_lock_memory_bank_array">
        <item>EPC</item>
        <item>ACCESS PWD</item>
        <item>KILL PWD</item>
        <item>TID</item>
        <item>USER</item>
    </string-array>
    <string-array name="acess_lock_privilege_array">
        
        <item>Read and Write</item>
        <item>Permanent Lock</item>
        <item>Permanent Unlock</item>
        <item>Unlock</item>
    </string-array>
    <string-array name="pre_filter_memory_bank_array">
        <item>EPC</item>
        <item>TID</item>
        <item>USER</item>
    </string-array>
    <string-array name="pre_filter_action_array">
        <item>INV A NOT INV B OR ASRT SL NOT DSRT SL</item>
        <item>INV A OR ASRT SL</item>
        <item>NOT INV B OR NOT DSRT SL</item>
        <item>INV A2BB2A NOT INV A OR NEG SL NOT ASRT SL</item>
        <item>INV B NOT INV A OR DSRT SL NOT ASRT SL</item>
        <item>INV B OR DSRT SL</item>
        <item>NOT INV A OR NOT ASRT SL</item>
        <item>NOT INV A2BB2A OR NOT NEG SL</item>
    </string-array>
    <string-array name="pre_filter_target_options">
        <item>SESSION S0</item>
        <item>SESSION S1</item>
        <item>SESSION S2</item>
        <item>SESSION S3</item>
        <item>SL FLAG</item>
    </string-array>
    <string-array name="pre_filter_tag_id_array">
        <item>AD9915404190725965400412</item>
        <item>AD9915404190725965400413</item>
        <item>AD9915404190725965400414</item>
        <item>AD9915404190725965400415</item>
        <item>AD9915404190725965400416</item>
    </string-array>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="title_activity_access_operations">AccessOperationsActivity</string>
    <string-array name="start_trigger_array">
        <item>Immediate</item>
        <item>Handheld</item>
        <item>Periodic</item>
    </string-array>
    <string-array name="stop_trigger_array">
        <item>Immediate</item>
        <item>Handheld</item>
        <item>Duration</item>
        <item>Tag Observation</item>
        <item>N attempts</item>
    </string-array>
    <string-array name="beeper_volume_array">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string name="none_paired">No Se Encontraron Dispositivos</string>
    <string name="select_device">Seleccione Un Dispositivo</string>
    <string name="none_found">No Se Encontraron Dispositivos</string>
    <string name="error_security">Security Error in SerialPortActivity</string>
    <string name="error_unknown">Unknown Error in Serial Port Activity</string>
    <string name="error_configuration">Configuration Error in SerialPortActivity</string>
    <string name="title_activity_base_receiver">BaseReceiverActivity</string>
    <string name="error_unsatisfied_link">UnsatisfiedLinkError in SerialPortActivity</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_regulatory_settings">Regulatory</string>
    <string name="title_activity_start_stop_trigger">Iniciar\\Detener Triggers</string>
    <string name="title_activity_save_configuration">Guardar Configuracion</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_beeper">Beeper</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_settings_detail">Setting Details</string>
    <string name="action_search">Search</string>
    <string name="action_rr">Rapid Read</string>
    <string name="search_hint">Enter Tag ID</string>
    <string name="active_reader_title">Lector Activo</string>
    <string name="available_readers_title">Lectores Disponibles</string>
    <string name="channel_selection">Channel Selection</string>
    <string name="reader_conn_sett">Reader Connection Settings</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="tag_reporting">Tag Reporting</string>
    <string name="battery">Bateria</string>
    <string name="rr_unique_tags_title">Unique Tags</string>
    <string name="rr_total_tag_title">LECTURAS TOTALES</string>
    <string name="rr_read_time_title">TIEMPO DE LECTURA</string>
    <string name="rr_read_rate_title">READ RATE</string>
    <string name="start_title">INICIAR</string>
    <string name="tag_id">Tag ID</string>
    <string name="locationing_distance_title">Relative Distance</string>
    <string name="stop_title">DETENER</string>
    <string name="tag_pattern_title">Patrón De Etiqueta</string>
    <string name="password_title">Password</string>
    <string name="memory_bank_title">Banco de Memoria</string>
    <string name="offset_title">Offset (words)</string>
    <string name="length_title">Length (words)</string>
    <string name="data_title">Data</string>
    <string name="operation_success">Operación Completada Exitosamente</string>
    <string name="read_title">LECTURA</string>
    <string name="write_title">ESCRITURA</string>
    <string name="lock_privilege_title">Lock Privilege</string>
    <string name="lock_title">LOCK</string>
    <string name="kill_pass_title">Kill Password</string>
    <string name="kill_title">KILL</string>
    <string name="offset_bits_title">Offset (words)</string>
    <string name="target_title">Target</string>
    <string name="action_title">Action</string>
    <string name="enable_filter_1">Habilitar Filtro 1</string>
    <string name="enable_filter_2">Habilitar Filtro 2</string>
    <string name="power_level_title">Nivel De Energia (dbm)</string>
    <string name="link_profile_title">Link Profile</string>
    <string name="status_success_message">Settings Applied Successfully</string>
    <string name="auto_detect_readers">Auto Detect Readers</string>
    <string name="auto_reconnect_reader">Auto Reconnect Reader</string>
    <string name="readers_available">Lector Disponible</string>
    <string name="readers_connection">Conexion Del Lector</string>
    <string name="reader_battery_status">Reader Battery Status</string>
    <string name="region_title">Region</string>
    <string name="warning_title">Advertencia:</string>
    <string name="country_selection_warning">Select only the country in which you are using the device</string>
    <string name="first_seen_time">First Seen Time</string>
    <string name="last_seen_time">Last Seen Time</string>
    <string name="pc">PC</string>
    <string name="rssi">RSSI</string>
    <string name="phase">Phase</string>
    <string name="channel_index">Channel Index</string>
    <string name="tag_seen_count">Tag Seen Count</string>
    <string name="save_to_sled">SAVE</string>
    <string name="battery_discharging_message">Status: Discharging.</string>
    <string name="RFID_demo_app">RFID Demonstration Application</string>
    <string name="moto_solutions">Zebra Technologies</string>
    <string name="app_version_title">Application Version</string>
    <string name="rfid_sled">RFID sled:</string>
    <string name="module_version">Module Version</string>
    <string name="radio_version">Radio Version</string>
    <string name="copyright_info">Copyright © 2016</string>
    <string name="sl_flag_title">SL Flag</string>
    <string name="inv_state_title">Inventory State</string>
    <string name="tag_population_title">Tag Population</string>
    <string name="session_title">Session</string>
    <string name="sled_beeper_title">Sled Beeper</string>
    <string name="beeper_volume_control_title">Sled Beeper Volume Control</string>
    <string name="start_trigger_title">Start Trigger</string>
    <string name="start_time_title">Start Time</string>
    <string name="periodic_title">Period (ms)</string>
    <string name="stop_trigger_title">Stop Trigger</string>
    <string name="duration_title">Duration (ms)</string>
    <string name="report_title">Report</string>
    <string name="periodic_report_title">Periodic Report</string>
    <string name="paired_devices_title">Paired Device</string>
    <string name="OK">OK</string>
    <string name="drawer_item_text">Drawer Item</string>
    <string name="drawer_image_desc">Icon for the Navigation drawer item</string>
    <string name="app_version">1.0.3.22</string>
    <string name="module_version_no">1.0.1.20</string>
    <string name="inv_filter_title">BANCO DE MEMORIA</string>
    <string name="inv_unique_title">ETIQUETAS UNICAS</string>
    <string name="inv_count_title">TOTAL DE LECTURAS</string>
    <string name="home_rapid_read">Lectura Rapida</string>
    <string name="home_inventory">Inventario</string>
    <string name="home_list_readers">Lista de lectores RFID</string>
    <string name="home_locate">Buscar Etiqueta</string>
    <string name="batch_mode_inventory_title">Inventory is running in batch mode</string>
</resources>